--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -247,11 +247,638 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c0092cf7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "1,2,3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "a, b, c = map(int, input().split())\n",
+    "print(a, b, c, sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "40f68321",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "14<15<16\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "print(num - 1, num, num + 1, sep='<')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c07d02fc",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#\n",
+    "\n",
+    "text1, text2, text3 = input(), input(), input()\n",
+    "print(text1, text2, text3, sep='---')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "921c40ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!\n",
+      "1!2!3!4!5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "sprtd = input()\n",
+    "print(1, 2, 3, 4, 5, sep=sprtd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7d3e7718",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3564\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "gram = int(input())\n",
+    "print(gram // 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "42854e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "11\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Дележ яблок - 1\n",
+    "\n",
+    "n, k = int(input()), int(input())\n",
+    "print(k // n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d9470f4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n",
+      "50\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "n, r = int(input()), int(input())\n",
+    "print(n // r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a3f35d13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "print(num % 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b7489e73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123456\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "print(num // 100 % 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ccee04ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "109\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "print(num // 100 + num // 10 % 10 + num % 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f4d587b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Выиграть в лотерею\n",
+    "\n",
+    "num = int(input())\n",
+    "count = num // 100 + num % 100 // 20 + num % 20 // 10 + num % 10 // 5 + num % 5\n",
+    "print(count)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "23ea982c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2879\n",
+      "23 59\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Электронные часы - 1\n",
+    "\n",
+    "minutes = int(input())\n",
+    "minutes = minutes % 1440\n",
+    "print(minutes // 60, minutes % 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2f1356fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Следующее четное\n",
+    "\n",
+    "num = int(input())\n",
+    "num = num // 2 * 2 + 2\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5579b5bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3721\n",
+      "01:02:01\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Электронные часы - 2\n",
+    "\n",
+    "seconds = int(input())\n",
+    "seconds %= 24 * 60 * 60\n",
+    "hours = str(seconds // (60 * 60))\n",
+    "minutes = str(seconds % (60 * 60) // 60)\n",
+    "seconds_res = str(seconds % 60)\n",
+    "print(hours + ':' + '0' * (2 - len(minutes)) + minutes + ':' + '0' * (2 - len(seconds_res)) + seconds_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3fa70c91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "print(int(input()) > 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b2ca5960",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "print(int(input()) % 2 == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c4d2240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "print(int(input()) % 6 == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6d6458fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "print(int(input()) % 9 != 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ff6068fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "print(int(input()) % 10 == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "df78402e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 21\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "a, b = map(int, input().split())\n",
+    "print(a % 7 == 0 and b % 7 == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "2e74bc49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 5 6\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "a, b, c = map(int, input().split())\n",
+    "print(a == b and a == c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "35233f4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "print(5 < int(input()) <= 19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82815fc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "word1, word2 = input(), input()\n",
+    "print(word1 == 'awesome' or word2 == 'awesome')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "654f4d04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "\n",
+    "a, b, c = map(int, input().split())\n",
+    "print(a == b or a == c or b == c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "b063ba3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "print(9 < int(input()) < 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "c9465b14",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 5\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "a = sorted(map(int, input().split()))\n",
+    "print(a[0]**2 + a[1]**2 == a[2]**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "32b552ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "203\n",
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Перевязь\n",
+    "\n",
+    "from math import ceil\n",
+    "n = int(input())\n",
+    "if n % 10 == 0:\n",
+    "    print(int(n / 10))\n",
+    "else:\n",
+    "    print(ceil(n / 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c8c00ede",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "from math import ceil\n",
+    "n = int(input())\n",
+    "if n % 4 == 0:\n",
+    "    print(int(n / 4))\n",
+    "else:\n",
+    "    print(ceil(n / 4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6c2ed6b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Парты\n",
+    "\n",
+    "classes = [int(input()) for i in range(3)]\n",
+    "count = 0\n",
+    "for elem in classes:\n",
+    "    if elem % 2 == 0:\n",
+    "        count += elem // 2\n",
+    "    else:\n",
+    "        count += elem // 2 + 1\n",
+    "print(count)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad6b9e1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ремонт\n",
+    "\n",
+    "from math import ceil\n",
+    "l, w, h = map(int, input().split())\n",
+    "print(ceil((l * h * 2 + w * h * 2) / 16))"
+   ]
   }
  ],
  "metadata": {
