--- a/lesson_1.ipynb
+++ b/lesson_1.ipynb
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 66,
    "id": "32b552ce",
    "metadata": {},
    "outputs": [
@@ -802,16 +802,12 @@
     "# Перевязь\n",
     "\n",
     "from math import ceil\n",
-    "n = int(input())\n",
-    "if n % 10 == 0:\n",
-    "    print(int(n / 10))\n",
-    "else:\n",
-    "    print(ceil(n / 10))"
+    "print(ceil(int(input()) / 10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "id": "c8c00ede",
    "metadata": {},
    "outputs": [
@@ -819,8 +815,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16\n",
-      "4\n"
+      "9\n",
+      "3\n"
      ]
     }
    ],
@@ -828,16 +824,12 @@
     "#\n",
     "\n",
     "from math import ceil\n",
-    "n = int(input())\n",
-    "if n % 4 == 0:\n",
-    "    print(int(n / 4))\n",
-    "else:\n",
-    "    print(ceil(n / 4))"
+    "print(ceil(int(input()) / 4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "id": "6c2ed6b3",
    "metadata": {},
    "outputs": [
@@ -855,15 +847,8 @@
    "source": [
     "# Парты\n",
     "\n",
-    "classes = [int(input()) for i in range(3)]\n",
-    "count = 0\n",
-    "for elem in classes:\n",
-    "    if elem % 2 == 0:\n",
-    "        count += elem // 2\n",
-    "    else:\n",
-    "        count += elem // 2 + 1\n",
-    "print(count)\n",
-    "        "
+    "from math import ceil\n",
+    "print(sum([ceil(int(input()) / 2) for i in range(3)]))"
    ]
   },
   {
