--- a/lesson_4.ipynb
+++ b/lesson_4.ipynb
@@ -2759,7 +2759,7 @@
     "        b = b[1:]\n",
     "res += a\n",
     "res += b\n",
-    "print(*res)\n"
+    "print(*res)"
    ]
   },
   {
@@ -2798,43 +2798,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "15f24a90",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "while num > 0:\n",
+    "    print(num % 10)\n",
+    "    num //= 10"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "733fd673",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "total = 0\n",
+    "while num > 0:\n",
+    "    total += num % 10\n",
+    "    num //= 10\n",
+    "print(total)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "140b1274",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "total = 1\n",
+    "while num > 0:\n",
+    "    total *= num % 10\n",
+    "    num //= 10\n",
+    "print(total)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "be9b53f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "408\n",
+      "0\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "minimum = 10 \n",
+    "maximum = 0\n",
+    "while num > 0:\n",
+    "    if num % 10 < minimum:\n",
+    "        minimum = num % 10\n",
+    "    if num % 10 > maximum:\n",
+    "        maximum = num % 10\n",
+    "    num //= 10\n",
+    "print(minimum, maximum, sep='\\n')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3ec02b91",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "127\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "print(input().count('7'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "fcf52539",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9999\n",
+      "11110000111001"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "num = int(input())\n",
+    "while num > 0:\n",
+    "    print(num % 2)\n",
+    "    num //= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "464ca6ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "n = int(input())\n",
+    "i = 1\n",
+    "res = []\n",
+    "while i**2 <= n:\n",
+    "    if n % i == 0:\n",
+    "        res.append(i)\n",
+    "        if i != n // i:\n",
+    "            res.append(n // i)\n",
+    "    i += 1\n",
+    "if sum(res) == n + 1:\n",
+    "    print('Yes')\n",
+    "else:\n",
+    "    print('No')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "4a207bf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n",
+      "32\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "n = int(input())\n",
+    "i = 1\n",
+    "res = []\n",
+    "while i**2 <= n:\n",
+    "    if n % i == 0:\n",
+    "        res.append(i)\n",
+    "        if i != n // i:\n",
+    "            res.append(n // i)\n",
+    "    i += 1\n",
+    "print(sum(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "06561ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77 22\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "a, b = map(int, input().split())\n",
+    "while a != b:\n",
+    "    if a > b:\n",
+    "        a -= b\n",
+    "    else:\n",
+    "        b -= a\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7319e269",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75 120\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "a, b = map(int, input().split())\n",
+    "while b != 0:\n",
+    "    a, b = b, a % b\n",
+    "print(a)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "9bc06958",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 15\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "x, y = map(int, input().split())\n",
+    "a, b = x, y\n",
+    "while b != 0:\n",
+    "    a, b = b, a % b\n",
+    "print(x * y // a) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "7f8322f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "n = int(input())\n",
+    "i = 2\n",
+    "while i <= n:\n",
+    "    if n % i == 0:\n",
+    "        print(i)\n",
+    "        break\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "51f07ed0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "7\n",
+      "1\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "a, b = int(input()), int(input())\n",
+    "while a <= b:\n",
+    "    if a % 777 == 0:\n",
+    "        break\n",
+    "    elif a % 2 == 0 or a % 3 == 0:\n",
+    "        a += 1\n",
+    "        continue\n",
+    "    print(a)\n",
+    "    a += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d342c370",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Гипотеза Коллатца\n",
+    "\n",
+    "n = int(input())\n",
+    "count = 0\n",
+    "while n > 1:\n",
+    "    count += 1\n",
+    "    if n % 2 == 0:\n",
+    "        n //= 2\n",
+    "    else:\n",
+    "        n = n * 3 + 1\n",
+    "print(count)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "42514ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QWERTY\n",
+      "Текущая буква: Q\n",
+      "Текущая буква: W\n",
+      "Текущая буква: E\n",
+      "Текущая буква: R\n",
+      "Текущая буква: T\n",
+      "Текущая буква: Y\n",
+      "Распечатали все буквы\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "text = input()\n",
+    "while len(text) > 0:\n",
+    "    if text[0] in 'ae':\n",
+    "        print('Ага! Нашлась')\n",
+    "        break\n",
+    "    print(f'Текущая буква: {text[0]}')\n",
+    "    text = text[1:]\n",
+    "else:\n",
+    "    print('Распечатали все буквы')"
+   ]
   }
  ],
  "metadata": {
