--- a/lesson_5.ipynb
+++ b/lesson_5.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "838e5fab",
+   "metadata": {},
+   "source": [
+    "# 5.1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "9800d23b",
@@ -18,6 +26,14 @@
     "#\n",
     "\n",
     "print(list(range(10)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e4aff48",
+   "metadata": {},
+   "source": [
+    "# 5.2"
    ]
   },
   {
@@ -232,6 +248,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acafcc14",
+   "metadata": {},
+   "source": [
+    "# 5.3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "a493b104",
@@ -408,6 +432,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9d54419d",
+   "metadata": {},
+   "source": [
+    "# 5.4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "a6f12e22",
@@ -579,7 +611,7 @@
    "id": "2c3a243e",
    "metadata": {},
    "source": [
-    "# QWE"
+    "# 5.5"
    ]
   },
   {
@@ -854,20 +886,790 @@
     "for i in range(n):\n",
     "    n_list = list(map(int, input().split()))\n",
     "    res.append(n_list)\n",
-    "res_2 = []\n",
     "for i in range(n):\n",
     "    b = []\n",
     "    for j in range(n):\n",
     "        b.append(res[j][i])\n",
-    "    res_2.append(b)\n",
-    "for elem in res_2:\n",
-    "    print(*elem)       "
+    "    print(*b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "83d818d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "3 4 9 6 2\n",
+      "8 2 0 5 1\n",
+      "4 7 4 8 7\n",
+      "7 1 3 3 8\n",
+      "5 6 3 7 0\n",
+      "0 8 7 1 2\n",
+      "7 3 8 5 6\n",
+      "3 3 4 0 9\n",
+      "6 1 7 2 4\n",
+      "5 7 4 8 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Обход элементов матрицы - 2\n",
+    "\n",
+    "n = int(input())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "for i in range(n - 1, -1, -1):\n",
+    "    b = []\n",
+    "    for j in range(n - 1, -1, -1):\n",
+    "        b.append(res[j][i])\n",
+    "    print(*b) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "60afa862",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "5 9 2 6\n",
+      "6 2 4 3\n",
+      "1 2 8 7\n",
+      "6 2 9 5\n",
+      "3 4 2 6\n",
+      "7 8 2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Обход элементов матрицы - 3\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "for i in range(n):\n",
+    "    b = []\n",
+    "    for j in range(m - 1, -1, -1):\n",
+    "        b.append(res[i][j])\n",
+    "    print(*b) \n",
+    "    \n",
+    "# n, m = map(int, input().split())\n",
+    "# res = []\n",
+    "# for i in range(n):\n",
+    "#     n_list = list(map(int, input().split()))\n",
+    "#     res.append(n_list)\n",
+    "# for elem in res:\n",
+    "#     print(*elem[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7bdd71e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "5 9 2 6\n",
+      "6 2 4 3\n",
+      "1 2 8 7\n",
+      "1 2 8 7\n",
+      "6 2 4 3\n",
+      "5 9 2 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Обход элементов матрицы - 4\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "for i in range(n - 1, -1, -1):\n",
+    "    b = []\n",
+    "    for j in range(m):\n",
+    "        b.append(res[i][j])\n",
+    "    print(*b)\n",
+    "    \n",
+    "# n, m = map(int, input().split())\n",
+    "# res = []\n",
+    "# for i in range(n):\n",
+    "#     n_list = list(map(int, input().split()))\n",
+    "#     res.append(n_list)\n",
+    "# for i in range(n - 1, -1, -1):\n",
+    "#     print(*res[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4f09c290",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 1 0 0\n",
+      "0 0 0 0 0\n",
+      "0 0 0 0 0\n",
+      "0 0 0 0 0\n",
+      "0 0 0 0 0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A. Красивая матрица \n",
+    "\n",
+    "res = []\n",
+    "for i in range(5):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        if res[i][j] == 1:\n",
+    "            a, b = i + 1, j + 1\n",
+    "print(abs(3 - a) + abs(3 - b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "87e66812",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "5 9 2 6\n",
+      "6 2 4 3\n",
+      "1 2 8 9\n",
+      "22 15 20 \n",
+      "12 13 14 18 "
+     ]
+    }
+   ],
+   "source": [
+    "# Сумма строк и столбцов двумерного массива\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "for elem in res:\n",
+    "    print(sum(elem), end=' ')\n",
+    "print()\n",
+    "for i in range(m):\n",
+    "    b = []\n",
+    "    for j in range(n):\n",
+    "        b.append(res[j][i])\n",
+    "    print(sum(b), end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8222379b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "0 0 0\n",
+      "0 0 0\n",
+      "1 0 0\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Симметричная ли матрица? \n",
+    "\n",
+    "n = int(input())\n",
+    "res = []\n",
+    "found = 'Yes'\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if i != j:\n",
+    "            if res[i][j] != res[j][i]:\n",
+    "                found = 'No'\n",
+    "                break\n",
+    "print(found)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b4c4348f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2\n",
+      "5 4\n",
+      "3 5\n",
+      "9\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Состязания\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "total = num = 0\n",
+    "for i in range(n):\n",
+    "    if sum(res[i]) > total:\n",
+    "        total, num = sum(res[i]), i\n",
+    "print(total, num, sep='\\n')        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "211bfe39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n",
+      "3 1 2\n",
+      "1 3 4\n",
+      "3 3 3\n",
+      "4\n",
+      "1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Состязания - 2\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "a = b = maximum = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        if res[i][j] > maximum:\n",
+    "            maximum, a, b = res[i][j], i, j\n",
+    "print(maximum)\n",
+    "print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7d527014",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n",
+      "6 2 7\n",
+      "1 2 8\n",
+      "1 3 8\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Состязания - 3\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "b = []\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        b.append(res[i][j])\n",
+    "max_one = max(b)\n",
+    "max_total = [0] * n\n",
+    "for i in range(n):\n",
+    "    if max_one in res[i]:\n",
+    "        max_total[i] += sum(res[i])\n",
+    "for i in range(n):\n",
+    "    if max_total[i] == max(max_total):\n",
+    "        print(i)\n",
+    "        break    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "521e79f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 3\n",
+      "7 8 9\n",
+      "9 3 10\n",
+      "4 3 8\n",
+      "5 6 7\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Состязания - 4\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    n_list = list(map(int, input().split()))\n",
+    "    res.append(n_list)\n",
+    "b = []\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        b.append(res[i][j])\n",
+    "max_one = max(b)\n",
+    "count = 0\n",
+    "for i in range(n):\n",
+    "    if max_one in res[i]:\n",
+    "        count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "37cae4e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bbwb\n",
+      "bbwb\n",
+      "wwbw\n",
+      "bbwb\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Симпатичный узор\n",
+    "\n",
+    "found = 'Yes'\n",
+    "res = []\n",
+    "for i in range(4):\n",
+    "    string = input()\n",
+    "    res.append([s for s in string])\n",
+    "for i in range(1, 4):\n",
+    "    for j in range(3):\n",
+    "        if res[i][j + 1] == res[i][j] == res[i - 1][j] and res[i][j] == res[i - 1][j + 1]:\n",
+    "            found = 'No'\n",
+    "            break\n",
+    "print(found)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "afb3015b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "wbbw\n",
+      "bbbb\n",
+      "wbbw\n",
+      "\n",
+      "bwww\n",
+      "wwwb\n",
+      "bwwb\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Миша и негатив\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res_1 = []\n",
+    "for i in range(n):\n",
+    "    string = input()\n",
+    "    res_1.append([s for s in string])\n",
+    "input()\n",
+    "res_2 = []\n",
+    "for i in range(n):\n",
+    "    string = input()\n",
+    "    res_2.append([s for s in string])\n",
+    "count = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        if res_1[i][j] == res_2[i][j]:\n",
+    "            count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "44f1d6a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 13\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A. Таблица умножения\n",
+    "\n",
+    "n, x = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    b = [0] * n\n",
+    "    res.append(b)\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        res[i][j] = (i + 1) * (j + 1)\n",
+    "count = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if res[i][j] == x:\n",
+    "            count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "490d719d",
+   "metadata": {},
+   "source": [
+    "# 5.7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "1e1ea875",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1 2\n",
+      "1 2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A. Матчи\n",
+    "\n",
+    "n = int(input())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    b = list(map(int, input().split()))\n",
+    "    res.append(b)\n",
+    "count = 0\n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        if res[i][0] == res[j][1]:\n",
+    "            count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "21db57d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 3\n",
+      "***\n",
+      "...\n",
+      "...\n",
+      "***\n",
+      ". . . . .\n",
+      ". * * * .\n",
+      ". . . . .\n",
+      ". . . . .\n",
+      ". * * * .\n",
+      ". . . . .\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Морской бой - 2\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = [[s for s in '.' * (m + 2)]]\n",
+    "for i in range(n):\n",
+    "    string = '.' + input() + '.'\n",
+    "    res.append([s for s in string])\n",
+    "res.append([s for s in '.' * (m + 2)])\n",
+    "count = 0\n",
+    "for i in range(1, n + 1):\n",
+    "    for j in range(1, m + 1):\n",
+    "        if res[i][j] == '.':\n",
+    "            if (res[i][j - 1] == '.' and res[i][j + 1] == '.') and (\n",
+    "                res[i - 1][j] == '.' and res[i + 1][j] == '.'):\n",
+    "                count += 1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "287348b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 8\n",
+      "0  1  2  3  4  5  6  7 \n",
+      "15 14 13 12 11 10 9  8 \n",
+      "16 17 18 19 20 21 22 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Заполнение змейкой\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    b = [0] * m\n",
+    "    res.append(b)\n",
+    "num = 0\n",
+    "for i in range(0, n, 2):\n",
+    "    for j in range(m):\n",
+    "        res[i][j] = str(res[i][j] + num).ljust(2)\n",
+    "        num += 1\n",
+    "    num += m\n",
+    "num = int(res[0][-1]) + 1\n",
+    "for i in range(1, n, 2):\n",
+    "    for j in range(m - 1, -1, -1):\n",
+    "        res[i][j] = str(res[i][j] + num).ljust(2)\n",
+    "        num += 1\n",
+    "    num += m\n",
+    "for elem in res:\n",
+    "    print(*elem)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "1ae7da82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1\n",
+      "W\n",
+      "#Black&White\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A. Фотографии Брейна\n",
+    "\n",
+    "n, m = map(int, input().split())\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    res.append(list(input().split()))\n",
+    "found = '#Black&White'\n",
+    "for elem in res:\n",
+    "    if elem.count('W') + elem.count('G') + elem.count('B') != len(elem):\n",
+    "        found = '#Color'\n",
+    "        break\n",
+    "print(found)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "f1923c09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1    2   \n",
+      "4    3   \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Спираль\n",
+    "\n",
+    "from math import ceil\n",
+    "\n",
+    "n = int(input())\n",
+    "number = n\n",
+    "num = 1\n",
+    "h = 0 \n",
+    "\n",
+    "res = []\n",
+    "for i in range(n):\n",
+    "    res.append([0] * n)\n",
+    "\n",
+    "for c in range(ceil(n / 2)):\n",
+    "    for j in range(h, n):\n",
+    "        res[h][j] += num\n",
+    "        num += 1\n",
+    "    for j in range(h + 1, n):\n",
+    "        res[j][n - 1] += num\n",
+    "        num += 1\n",
+    "    for j in range(n - 2, h - 1, -1):\n",
+    "        res[n - 1][j] += num\n",
+    "        num += 1\n",
+    "    for j in range(n - 2, h, -1):\n",
+    "        res[j][h] += num\n",
+    "        num += 1\n",
+    "    h += 1\n",
+    "    n -= 1\n",
+    "           \n",
+    "for i in range(number):\n",
+    "    for j in range(number):\n",
+    "        res[i][j] = str(res[i][j]).ljust(4)\n",
+    "for elem in res:\n",
+    "    print(*elem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "aa046530",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "S...\n",
+      "....\n",
+      "..S.\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A. Тортминатор\n",
+    "\n",
+    "r, c = map(int, input().split())\n",
+    "cake = []\n",
+    "count = 0\n",
+    "for i in range(r):\n",
+    "    string = input()\n",
+    "    cake.append([s for s in string])\n",
+    "\n",
+    "cake_2 = []\n",
+    "for elem in cake:\n",
+    "    if 'S' not in elem:\n",
+    "        count += c\n",
+    "        elem = [0] * c\n",
+    "    cake_2.append(elem)\n",
+    "    \n",
+    "for i in range(c):\n",
+    "    b = []\n",
+    "    for j in range(r):\n",
+    "        b.append(cake_2[j][i])\n",
+    "    if 'S' not in b:\n",
+    "        count += b.count('.')\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d53994c",
+   "metadata": {},
+   "source": [
+    "# 5.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "7e892455",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n",
+      "[['.', ',', '.'], [4, 5, 6], [7, 8, 9]]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ea59e4",
    "metadata": {},
    "outputs": [],
    "source": []
