--- a/lesson_5.ipynb
+++ b/lesson_5.ipynb
@@ -1543,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 9,
    "id": "f1923c09",
    "metadata": {},
    "outputs": [
@@ -1551,9 +1551,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "1    2   \n",
-      "4    3   \n"
+      "3\n",
+      "1    2    3   \n",
+      "\n",
+      "8    9    4   \n",
+      "\n",
+      "7    6    5   \n",
+      "\n"
      ]
     }
    ],
@@ -1571,7 +1575,7 @@
     "for i in range(n):\n",
     "    res.append([0] * n)\n",
     "\n",
-    "for c in range(ceil(n / 2)):\n",
+    "for h in range(ceil(n / 2)):\n",
     "    for j in range(h, n):\n",
     "        res[h][j] += num\n",
     "        num += 1\n",
@@ -1584,14 +1588,14 @@
     "    for j in range(n - 2, h, -1):\n",
     "        res[j][h] += num\n",
     "        num += 1\n",
-    "    h += 1\n",
     "    n -= 1\n",
     "           \n",
     "for i in range(number):\n",
     "    for j in range(number):\n",
     "        res[i][j] = str(res[i][j]).ljust(4)\n",
     "for elem in res:\n",
-    "    print(*elem)"
+    "    print(*elem)\n",
+    "    print()"
    ]
   },
   {
@@ -1649,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 44,
    "id": "7e892455",
    "metadata": {},
    "outputs": [
@@ -1657,22 +1661,280 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 0]\n",
-      "[0, 0, 0]\n",
-      "[0, 0, 0]\n",
-      "[['.', ',', '.'], [4, 5, 6], [7, 8, 9]]\n"
+      "10\n",
+      "1     \n",
+      "2     1     \n",
+      "3     3     1     \n",
+      "4     6     4     1     \n",
+      "5     10    10    5     1     \n",
+      "6     15    20    15    6     1     \n",
+      "7     21    35    35    21    7     1     \n",
+      "8     28    56    70    56    28    8     1     \n",
+      "9     36    84    126   126   84    36    9     1     \n",
+      "10    45    120   210   252   210   120   45    10    1     \n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Треугольник Паскаля\n",
+    "\n",
+    "n = int(input()) + 1\n",
+    "triangle = [[1] + [0] * (n - 1) for i in range(n)]\n",
+    "    \n",
+    "for i in range(1, n):\n",
+    "    for j in range(1, i + 1):\n",
+    "        triangle[i][j] = triangle[i - 1][j] + triangle[i - 1][j - 1]  \n",
+    "            \n",
+    "for i in range(n):\n",
+    "    for j in range(n):\n",
+    "        triangle[i][j] = str(triangle[i][j]).ljust(5)\n",
+    "        \n",
+    "for i in range(1, n):\n",
+    "    for j in range(1, i + 1):\n",
+    "        print(triangle[i][j], end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96f180b9",
+   "metadata": {},
+   "source": [
+    "# 5.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "23b30bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "zeros = [0 for i in range(100)]\n",
+    "print(zeros)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "61ea8b53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "res = [i for i in range(1, int(input()) + 1)]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "978a84d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "[1, 2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "n = int(input())\n",
+    "res = [i for i in range(1, n + 1) if n % i == 0]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a33ccd10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "[7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "n = int(input())\n",
+    "res = [i for i in range(n, n**2 + 1) if i % 2 == 1]\n",
+    "print(res)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22ea59e4",
+   "id": "46e3a97d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#\n",
+    "\n",
+    "a, b = map(int, input().split())\n",
+    "if a <= b:\n",
+    "    res = [i**2 for i in range(a, b + 1)]\n",
+    "    print(res)\n",
+    "else:\n",
+    "    res = [i**3 for i in range(a, b - 1, -1)]\n",
+    "    print(res)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f7f3b931",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "st = 'Create a list of the first letters of every word in this string'\n",
+    "res = [word[0] for word in st.split()]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "827aac7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABCDEFGHIJKLMNOPQRSTUVWXYZ\n",
+      "4\n",
+      "['A', 'B', 'C', 'D']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "from string import ascii_uppercase\n",
+    "\n",
+    "n = int(input())\n",
+    "res = [ascii_uppercase[i] for i in range(n)]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "beb60d63",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "['A', 'BB', 'CCC', 'DDDD']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "from string import ascii_uppercase\n",
+    "\n",
+    "n = int(input())\n",
+    "res = [ascii_uppercase[i] * (i + 1) for i in range(n)]\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "5c268215",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Take', 'the', 'that', 't', 'this']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "phrase = 'Take only the words that start with t in this sentence'\n",
+    "res = [word for word in phrase.split() if word[0] in 'tT']\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aba229d9",
+   "metadata": {},
+   "source": [
+    "# 5.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "de1f0f8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "\n",
+    "vector = [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12], [13, 14, 15], [16, 17, 18]]\n",
+    "res = [j for i in vector for j in i]\n",
+    "print(*res)"
+   ]
   }
  ],
  "metadata": {
