tenth day, finished lesson_6

--- a/lesson_6.ipynb
+++ b/lesson_6.ipynb
@@ -634,47 +634,129 @@
     "    string = input()\n",
     "res = {len(v): 'Вили', len(d): 'Дили', len(b): 'Били'}\n",
     "for key in sorted(res, reverse=True):\n",
-    "    print(f'Количество уникальных комментаторов у {res[key]} - {key}')\n",
-    "    \n",
-    "    "
+    "    print(f'Количество уникальных комментаторов у {res[key]} - {key}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "65d5c7b6",
+   "execution_count": 3,
+   "id": "b57d239f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sevenkplus\n",
+      "CHAT WITH HER!\n"
+     ]
+    }
+   ],
    "source": [
-    "Дили: navalny\n",
-    "Дили: realdonaldtrump\n",
-    "Били: navalny\n",
-    "Вили: realdonaldtrump\n",
-    "Вили: realdonaldtrump\n",
-    "Били: joebiden\n",
-    "Дили: joebiden\n",
-    "конец\n",
+    "# Девушка или Юноша\n",
     "\n",
-    "Sample Output 1:\n",
+    "nickname = set(input())\n",
+    "print('IGNORE HIM!' if len(nickname) % 2 == 1 else 'CHAT WITH HER!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9357ac49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 7 7 7\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Не смешите мои подковы\n",
     "\n",
-    "Количество уникальных комментаторов у Дили - 3\n",
-    "Количество уникальных комментаторов у Били - 2\n",
-    "Количество уникальных комментаторов у Вили - 1\n",
+    "horseshoes = set(input().split())\n",
+    "lenght = len(horseshoes)\n",
+    "print(4 - lenght)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1c9428af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1987\n",
+      "2013\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Красивый год\n",
     "\n",
-    "Sample Input 2:\n",
+    "year = input()\n",
+    "i = int(year)\n",
+    "while True:\n",
+    "    i += 1\n",
+    "    res = set(str(i))\n",
+    "    if len(res) == 4:\n",
+    "        print(i)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2ce9b93c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Антон и буквы\n",
     "\n",
-    "Дили: aaaa\n",
-    "Дили: aaaa\n",
-    "Били: aaaa\n",
-    "Дили: aaaa\n",
-    "Били: aaa\n",
-    "конец\n",
+    "res = input()[1: -1]\n",
+    "if len(res) == 0:\n",
+    "    print(0)\n",
+    "else:\n",
+    "    res_set = set(res.split(', '))\n",
+    "    print(len(res_set))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "7e0fcdcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n",
+      "TheQuickBrownFoxJumpsOverTheLazyDog\n",
+      "YES\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Панграмма\n",
     "\n",
-    "Sample Output 2:\n",
-    "\n",
-    "Количество уникальных комментаторов у Били - 2\n",
-    "Количество уникальных комментаторов у Дили - 1\n",
-    "Количество уникальных комментаторов у Вили - 0"
+    "n, string = input(), set(input().lower())\n",
+    "print('YES' if len(string) == 26 else 'NO')"
    ]
   }
  ],
